<resources>
    <string name="notification_name" translatable="false">NotificationLunch Channel</string>
    <string name="notification_description" translatable="false">channel to remind lunch</string>
    <string name="app_name">Go4Lunch</string>t
    <string name="gg_button_text">Sign in with Google</string>
    <string name="mail_button_text">SIGN IN WITH YOUR EMAIL</string>
    <string name="success_message">Successful connexion</string>
    <string name="failure_message">Connexion failed</string>
    <string name="map_view_navigation_bar">Map View</string>
    <string name="list_view_navigation_bar">List View</string>
    <string name="workmates_navigation_bar">Workmates</string>
    <string name="website_button">WEBSITE</string>
    <string name="like_button">LIKE</string>
    <string name="call_button">CALL</string>
    <string name="search_menu">Search</string>
    <string name="search_hint">Type here to search a restaurant</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="toast_drawer_message">You have to choose a restaurant for lunch !</string>
    <string name="drawer_lunch">YOUR LUNCH</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="srawer_logout">LOGOUT</string>
    <string name="user_description_no_decision">hasn\'t decided yet</string>
    <string name="user_description_with_decision">" is eating ("</string>
    <string name="restaurant_detail_joining">" is joining !"</string>
    <string name="settings_enabled_notifications">Enable notifications :</string>
    <string name="settings_disabled_notifications">Disable notifications :</string>
    <string name="settings_language">English</string>
    <string name="settings_suppress_account">Delete account</string>
    <string name="validate_user_name">Validate</string>
    <string name="user_name_modifier_hint">Change your user name here</string>
    <string name="toast_modify_user_name">You have to chose a user name to change it !</string>
    <string name="notification_title">It\'s time !</string>
    <string name="notification_message_pre">You\'ve choose \"</string>
    <string name="notification_message_post">\" to eat for this lunch. Check who want to eat here too !</string>
    <string name="spinner_by_position">Sorted by position</string>
    <string name="spinner_by_evaluation">Sorted by evaluation</string>
    <string name="spinner_by_luncher">Sorted by luncher</string>
</resources>