<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_lunch"
            android:icon="@drawable/baseline_restaurant_menu_24"
            android:title="@string/drawer_lunch" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/drawer_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_power_settings_new_24"
            android:title="@string/srawer_logout" />
    </group>
</menu>