<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_settings"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_gravity="center_horizontal"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_enabled_notifications"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:id="@+id/user_name_modifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_modifier_hint"
        android:layout_margin="@dimen/margin_medium"
        android:inputType="textCapWords" />
    <Button
        android:id="@+id/validate_user_name_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/validate_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_suppress_account"
            android:layout_margin="@dimen/margin_medium"/>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>